fix home style on small devices

--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -12,7 +12,6 @@ $columnWidth: calc(
   // background-repeat: no-repeat;
   // background-position: center -80px;
   padding: 48px 0;
-  // padding: 110px 0;
   .container {
     padding: 0 $web-side-space;
     .row {
@@ -29,6 +28,48 @@ $columnWidth: calc(
       grid-template-columns: $columnWidth $columnWidth $columnWidth $columnWidth;
       column-gap: $columnGap;
       justify-content: space-evenly;
+    }
+  }
+  @media screen and (max-width: 1200px) {
+    $columnsCount: 3;
+    $columnGap: calc(220px / (#{$columnsCount} - 1));
+    $columnWidth: calc(
+      (100% - ((#{$columnsCount} - 1) * #{$columnGap})) / #{$columnsCount}
+    );
+    .container {
+      .cardsContainer {
+        grid-template-columns: $columnWidth $columnWidth $columnWidth;
+        column-gap: $columnGap;
+      }
+    }
+  }
+  @media screen and (max-width: 960px) {
+    $columnsCount: 2;
+    $columnGap: calc(120px / (#{$columnsCount} - 1));
+    $columnWidth: calc(
+      (100% - ((#{$columnsCount} - 1) * #{$columnGap})) / #{$columnsCount}
+    );
+    .container {
+      .cardsContainer {
+        grid-template-columns: $columnWidth $columnWidth;
+        column-gap: $columnGap;
+      }
+    }
+  }
+  @media screen and (max-width: 750px) {
+    .container {
+      padding: 0 35px;
+      .row {
+        flex-direction: column;
+        .filterSelect {
+          margin-top: 70px;
+        }
+      }
+      .cardsContainer {
+        padding: 0 45px;
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
 }
